--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -21,10 +22,9 @@
   <div class="hero-content">
 <h1>Get in Touch with Sunmax Solar Power</h1>
 
-<p>Have questions or want to start your solar energy project? 
-   Contact us today, and our expert team at Sunmax Solar Power will guide you with reliable and efficient solar solutions.</p>
+<p>Have questions or ready to start your solar energy project? Contact us today and our expert team will provide you with reliable and efficient solar solutions.</p>
 
-    <a href="#services" class="btn">Explore Services</a>
+    <a href="#services" class="btn">Explore Products</a>
   </div>
 
   <!-- DIVIDER OPTIONS -->
@@ -43,10 +43,10 @@
     <!-- Left Contact Info -->
     <div class="contact-info">
       <h2>Contact Us</h2>
-      <p><i class="fas fa-map-marker-alt"></i>Plot No. 14, Suvarna Colony, Karvenagar,<br>Pune - 411052</p>
+      <p><i class="fas fa-map-marker-alt"></i> Plot No. 14, Suvarna Colony, Karvenagar,<br>Pune - 411052</p>
       <p><i class="fas fa-envelope"></i> sunmaxsolar2018@gmail.com</p>
-      <p><i class="fas fa-phone"></i>+91 9881056604</p>
-      <p><i class="fas fa-fax"></i> +91 7263948865</p>
+      <p><i class="fas fa-phone"></i> +91 7263948865</p>
+
     </div>
 
     <!-- Right Form with Background Image -->
@@ -58,7 +58,9 @@
         <form id="contactForm">
           <input type="text" placeholder="Your Name" required>
           <input type="email" placeholder="Your Email" required>
-          <textarea placeholder="Typing your message here..." required></textarea>
+          <!-- Added Subject Field -->
+          <input type="text" placeholder="Subject" required>
+          <textarea placeholder="Type your message here..." required></textarea>
           <button type="submit">SEND</button>
         </form>
       </div>
@@ -68,20 +70,21 @@
 
 
 
-
-
 <!-- Google Map Section -->
-<section class="map-section">
-  <div class="map-container">
-    <h2 class="map-heading">Find Us on Map</h2>
-    <p class="map-location"><i class="fas fa-map-marker-alt"></i> Plot No. 14, Suvarna Colony, Karvenagar,Pune - 411052</p>
+<!-- Google Map Section -->
+<section class="map-section" style="padding: 40px 20px; background: #f9f9f9;">
+  <div class="map-container" style="max-width: 1200px; margin: 0 auto;">
+    <h2 class="map-heading" style="text-align: center; margin:20px 0; font-size: 28px;">Find Us on Map</h2>
+    <p class="map-location" style="text-align: center; font-size: 16px; margin: 0 0 20px 0;">
+      <i class="fas fa-map-marker-alt" style="color:#e63946;"></i> Plot No. 14, Suvarna Colony, Karvenagar, Pune - 411052
+    </p>
 
     <!-- Pune Location Map -->
     <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.4352639796554!2d73.86296787496425!3d18.52882386905885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c06d59e2a9e5%3A0x33e1c6a8b4e2e8b!2sPune%20Junction!5e0!3m2!1sen!2sin!4v1727250000000!5m2!1sen!2sin" 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.905883023241!2d73.81725951526062!3d18.48811298738567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf005f89e437%3A0xdac75b49f91a1624!2sSuvarna%20Colony%2C%20Karvenagar%2C%20Pune%2C%20Maharashtra%20411052!5e0!3m2!1sen!2sin!4v1696072196000!5m2!1sen!2sin" 
       width="100%" 
-      height="450" 
-      style="border:0;" 
+      height="400" 
+      style="border:0; border-radius: 10px;" 
       allowfullscreen="" 
       loading="lazy" 
       referrerpolicy="no-referrer-when-downgrade">
@@ -91,60 +94,134 @@
 
 
 
+
+<!-- ///////////////////// WhatsApp ////////////////////// -->
+
+
+<section id="contact-buttons">
+  <!-- WhatsApp & Phone Buttons -->
+  <div style="position: fixed; bottom: 20px; right: 20px; display: flex; flex-direction: column; gap: 12px; z-index: 1100;">
+
+    <!-- Phone Button -->
+    <a href="tel:+917263948865" 
+       style="width: 55px; height: 55px; border-radius: 50%; display: flex; justify-content: center; align-items: center; color: #fff; font-size: 24px; text-decoration: none; box-shadow: 0 4px 10px rgba(0,0,0,0.3); background: #0d4a55; transition: transform 0.2s ease-in-out;">
+      <i class="fas fa-phone-alt"></i>
+    </a>
+
+    <!-- WhatsApp Button -->
+    <a href="https://wa.me/+917263948865" target="_blank"
+       style="width: 55px; height: 55px; border-radius: 50%; display: flex; justify-content: center; align-items: center; color: #fff; font-size: 24px; text-decoration: none; box-shadow: 0 4px 10px rgba(0,0,0,0.3); background: #25D366; transition: transform 0.2s ease-in-out;">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+
+  </div>
+</section>
+
+
   <script src="contact.js"></script>
   <!-- Footer -->
-<footer class="footer" style="position: relative; background: #111; color: #fff;">
+<footer class="footer" style="position: relative; background: #111; color: #fff; font-family: 'Poppins', sans-serif;">
   <!-- Top Wave Divider -->
-<div style="position: absolute; top: 0; left: 0; width: 100%; overflow: hidden; line-height: 0;">
-  <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="display:block; width:100%; height:100px;">
-    <path d="M0,100 C150,0 350,200 500,100 L500,0 L0,0 Z" style="fill:#fff;"></path>
-  </svg>
-</div>
+  <div style="position: absolute; top: 0; left: 0; width: 100%; overflow: hidden; line-height: 0;">
+    <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="display:block; width:100%; height:100px;">
+      <path d="M0,100 C150,0 350,200 500,100 L500,0 L0,0 Z" style="fill:#fff;"></path>
+    </svg>
+  </div>
 
-  <div class="footer-container" style="padding-top: 100px;">
+  <!-- Grid Layout -->
+  <div class="footer-container" style="
+        padding-top: 100px; 
+        display: grid; 
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); 
+        gap: 40px;
+        align-items: flex-start;   /* aligns all cols neatly at the top */
+        text-align: left;          /* default alignment left */
+      ">
+    
     <!-- Company Info -->
     <div class="footer-col">
-      <img src="images/LOGO.jpg" alt="Sunmax Solar Power Logo" class="footer-logo" />
-      <p>Established in 2013, we are a trusted supplier of Solar Water Heaters, Solar Street Lights, and other solar solutions. Delivering quality and innovation for a sustainable future.</p>
+      <img src="images/LOGO.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
+      <p style="line-height:1.6; font-size:14px;">
+        Established in 2013, we are a trusted supplier of solar water heaters, solar street lights and other solar solutions, delivering quality and innovation for a sustainable future.
+      </p>
     </div>
 
     <!-- Quick Links -->
     <div class="footer-col">
-      <h4>Quick Links</h4>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="product.html">Products</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
+      <h4 style="margin-bottom:15px;">Quick Links</h4>
+      <ul style="list-style:none; padding:0; margin:0; line-height:1.8;">
+        <li><a href="index.html" style="color:#fff; text-decoration:none;">Home</a></li>
+        <li><a href="about.html" style="color:#fff; text-decoration:none;">About Us</a></li>
+        <li><a href="product.html" style="color:#fff; text-decoration:none;">Products</a></li>
+        <li><a href="gallery.html" style="color:#fff; text-decoration:none;">Gallery</a></li>
+        <li><a href="contact.html" style="color:#fff; text-decoration:none;">Contact</a></li>
       </ul>
     </div>
 
     <!-- Contact -->
-    <div class="footer-col">
-      <h4>Contact Us</h4>
-      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Address:</span> Plot No. 14, Suvarna Colony, Karvenagar,
-Pune - 411052</p>
-      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Contact:</span> +91 9881056604</p>
-      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Email:</span>sunmaxsolar2018@gmail.com</p>
-    </div>
+<div class="footer-col">
+  <h4 style="margin-bottom:15px;">Contact Us</h4>
+
+  <!-- Address -->
+  <p style="margin:10px 0; font-size:14px; display:flex; align-items:center;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+         fill="white" viewBox="0 0 24 24" style="margin-right:10px;">
+      <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 
+               0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+    </svg>
+    Plot No. 14, Suvarna Colony, Karvenagar, Pune - 411052
+  </p>
+
+  <!-- Phone -->
+  <p style="margin:10px 0; font-size:14px; display:flex; align-items:center;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+         fill="white" viewBox="0 0 24 24" style="margin-right:10px;">
+      <path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2c.27-.27.67-.36 
+               1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 
+               1 1V20c0 .55-.45 1-1 1C10.29 21 3 13.71 
+               3 5c0-.55.45-1 1-1h3.5c.55 0 1 .45 
+               1 1 0 1.24.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+    </svg>
+    +91 7263948865
+  </p>
+
+  <!-- Email -->
+  <p style="margin:10px 0; font-size:14px; display:flex; align-items:center;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+         fill="white" viewBox="0 0 24 24" style="margin-right:10px;">
+      <path d="M20 4H4c-1.1 0-2 .9-2 
+               2v12c0 1.1.9 2 2 
+               2h16c1.1 0 2-.9 
+               2-2V6c0-1.1-.9-2-2-2zm0 
+               4l-8 5-8-5V6l8 5 8-5v2z"/>
+    </svg>
+    sunmaxsolar2018@gmail.com
+  </p>
+</div>
+
 
     <!-- Social Links -->
     <div class="footer-col">
-      <h4>Follow Us</h4>
-      <div class="social-links">
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" alt="LinkedIn"></a>
+      <h4 style="margin-bottom:15px;">Follow Us</h4>
+      <div style="display:flex; gap:15px;">
+        <!-- Instagram -->
+        <!-- <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" style="width:26px;"></a> -->
+        <!-- Facebook -->
+        <a href="https://www.facebook.com/share/1BA3SUThJk/"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" style="width:26px;"></a>
+        <!-- LinkedIn -->
+        <!-- <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" style="width:26px;"></a> -->
       </div>
     </div>
   </div>
 
-  <div class="footer-bottom" style="margin-top:20px; text-align:center;">
-    <p>© 2025 Sunmax Solar Power. All Rights Reserved.</p>
-    <p>Developed By DW INNOVATION PVT. LTD.</p>
+  <!-- Footer Bottom -->
+  <div class="footer-bottom" style="margin-top:40px; text-align:center; border-top:1px solid rgba(255,255,255,0.2); padding:15px 0; font-size:14px;">
+    <p style="margin:5px 0;">© 2025 Sunmax Solar Power. All Rights Reserved.</p>
+    <p style="margin:5px 0;">Developed by DW Innovation Pvt. Ltd.</p>
   </div>
 </footer>
+
+
   <!-- Load navbar and then navbar.js -->
 
 
