--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="gallery.css">
     <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -20,26 +21,63 @@
     
     <!-- Section Heading -->
     <h2>Our projects Gallery</h2>
-    <p>A glimpse of our celebrations, events, and memorable moments captured in pictures.</p>
+    <p>A glimpse of our celebrations, events and memorable moments captured in pictures.</p>
 
     <!-- Masonry Gallery Grid -->
-    <div class="gallery-grid">
-      <div class="gallery-item"><img src="Gallery/01.webp" alt="Event 1"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/02.webp" alt="Event 2"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/04.webp" alt="Event 4"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/05.webp" alt="Event 5"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/06.webp" alt="Event 6"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/07.webp" alt="Event 7"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/09.webp" alt="Event 8"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/10.webp" alt="Event 9"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/08.webp" alt="Event 10"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/11.webp" alt="Event 11"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/12.webp" alt="Event 12"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/13.webp" alt="Event 13"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/14.webp" alt="Event 14"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/15.webp" alt="Event 15"><div class="overlay"></div></div>
-      <div class="gallery-item"><img src="Gallery/03.webp" alt="Event 3"><div class="overlay"></div></div>
-    </div>
+<div class="gallery-grid">
+
+  <!-- Example you already had -->
+
+
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw Yashwant Dangat, wadgao</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">5kw yogesh dangat, wadgao</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw pradhyuman gopal, suncity</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw purshottam gopal, suncity</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">30kw Maple tower, NIBM ROAD</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw jayesh solanki, undri</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">2Kw tarkunde , nigadi</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">10Kw satkar reality, taljai pathar</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">15kw Dr.kamble, Ravet</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">20kw Deccan park hotel , fergusen college road</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">15kw MR. Rohan Bihani, Prabhat road</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">25kw+25kw Vallonia, bavdhan</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">25kw Rajlakshmi Hall, kothrud</div></div>
+
+  <!-- Videos -->
+  <!-- <div class="gallery-item">
+    <video width="100%" controls>
+      <source src="images/Video02.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay">30kw Kendriya Vihar society, Chikhli.</div>
+  </div>
+
+  <div class="gallery-item">
+    <video width="100%" controls>
+      <source src="images/video_01.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay">9.3kw Kendiya Vihar Community Hall</div>
+  </div> -->
+
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">9.3kw Kendiya Vihar Street light</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">15kw Satav commercial space, Wagholi</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">10Kw Satav complex, Wagholi</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">40kw Gharkul Society, spine road</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">10kw Siddhu, Lodha belmondo Ravet</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">7kw Amit Lalwani, Navkar Majestiq, Kondhva</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">7kw Mr. Landage, Sahkarnagar</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">5kw Kanal sir, Parvati</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw Shankar Kedari, Karvenagar</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3Kw Visapure, Undri</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">5kw Kaustubh Satav, Wagholi</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw Mr. Shankar Kedari, Karvenagar</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw Mr. Galgali, Bhugao</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">2kw Nasim Bagwan, Katraj</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">2kw Mr. Baviskar, Kharadi</div></div>
+
+</div>
+
   </div>
 </section>
 
@@ -65,58 +103,132 @@
 
 
 
-<footer class="footer" style="position: relative; background: #111; color: #fff;">
-  <!-- Top Wave Divider -->
-<div style="position: absolute; top: 0; left: 0; width: 100%; overflow: hidden; line-height: 0;">
-  <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="display:block; width:100%; height:100px;">
-    <path d="M0,100 C150,0 350,200 500,100 L500,0 L0,0 Z" style="fill:#fff;"></path>
-  </svg>
-</div>
 
-  <div class="footer-container" style="padding-top: 100px;">
+  
+
+
+<!-- ///////////////////// WhatsApp ////////////////////// -->
+
+
+<section id="contact-buttons">
+  <!-- WhatsApp & Phone Buttons -->
+  <div style="position: fixed; bottom: 20px; right: 20px; display: flex; flex-direction: column; gap: 12px; z-index: 1100;">
+
+    <!-- Phone Button -->
+    <a href="tel:+917263948865" 
+       style="width: 55px; height: 55px; border-radius: 50%; display: flex; justify-content: center; align-items: center; color: #fff; font-size: 24px; text-decoration: none; box-shadow: 0 4px 10px rgba(0,0,0,0.3); background: #0d4a55; transition: transform 0.2s ease-in-out;">
+      <i class="fas fa-phone-alt"></i>
+    </a>
+
+    <!-- WhatsApp Button -->
+    <a href="https://wa.me/+917263948865" target="_blank"
+       style="width: 55px; height: 55px; border-radius: 50%; display: flex; justify-content: center; align-items: center; color: #fff; font-size: 24px; text-decoration: none; box-shadow: 0 4px 10px rgba(0,0,0,0.3); background: #25D366; transition: transform 0.2s ease-in-out;">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+
+  </div>
+</section>
+
+
+<footer class="footer" style="position: relative; background: #111; color: #fff; font-family: 'Poppins', sans-serif; font-size:16px;">
+  <!-- Top Wave Divider -->
+  <div style="position: absolute; top: 0; left: 0; width: 100%; overflow: hidden; line-height: 0;">
+    <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="display:block; width:100%; height:100px;">
+      <path d="M0,100 C150,0 350,200 500,100 L500,0 L0,0 Z" style="fill:#fff;"></path>
+    </svg>
+  </div>
+
+  <!-- Grid Layout -->
+  <div class="footer-container" style="
+        padding-top: 100px; 
+        display: grid; 
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); 
+        gap: 40px;
+        align-items: flex-start;
+        text-align: left;
+        color:#fff;  /* make all text white */
+        font-size:16px; /* base font size */
+      ">
+    
     <!-- Company Info -->
     <div class="footer-col">
-      <img src="images/LOGO.jpg" alt="Sunmax Solar Power Logo" class="footer-logo" />
-      <p>Established in 2013, we are a trusted supplier of Solar Water Heaters, Solar Street Lights, and other solar solutions. Delivering quality and innovation for a sustainable future.</p>
+      <img src="images/LOGO.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
+      <p style="line-height:1.7; font-size:16px; color:#fff;">
+        Established in 2013, we are a trusted supplier of solar water heaters, solar street lights and other solar solutions, delivering quality and innovation for a sustainable future.
+      </p>
     </div>
 
     <!-- Quick Links -->
     <div class="footer-col">
-      <h4>Quick Links</h4>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="product.html">Products</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
+      <h4 style="margin-bottom:15px; color:#fff; font-size:18px;">Quick Links</h4>
+      <ul style="list-style:none; padding:0; margin:0; line-height:1.9;">
+        <li><a href="index.html" style="color:#fff; text-decoration:none; font-size:16px;">Home</a></li>
+        <li><a href="about.html" style="color:#fff; text-decoration:none; font-size:16px;">About Us</a></li>
+        <li><a href="product.html" style="color:#fff; text-decoration:none; font-size:16px;">Products</a></li>
+        <li><a href="gallery.html" style="color:#fff; text-decoration:none; font-size:16px;">Gallery</a></li>
+        <li><a href="contact.html" style="color:#fff; text-decoration:none; font-size:16px;">Contact</a></li>
       </ul>
     </div>
 
     <!-- Contact -->
     <div class="footer-col">
-      <h4>Contact Us</h4>
-      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Address:</span> Plot No. 14, Suvarna Colony, Karvenagar,
-Pune - 411052</p>
-      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Contact:</span> +91 9881056604</p>
-      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Email:</span>sunmaxsolar2018@gmail.com</p>
+      <h4 style="margin-bottom:15px; color:#fff; font-size:18px;">Contact Us</h4>
+
+      <!-- Address -->
+      <p style="margin:10px 0; font-size:16px; display:flex; align-items:center; color:#fff;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+             fill="white" viewBox="0 0 24 24" style="margin-right:10px;">
+          <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 
+                   0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+        </svg>
+        Plot No. 14, Suvarna Colony, Karvenagar, Pune - 411052
+      </p>
+
+      <!-- Phone -->
+      <p style="margin:10px 0; font-size:16px; display:flex; align-items:center; color:#fff;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+             fill="white" viewBox="0 0 24 24" style="margin-right:10px;">
+          <path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2c.27-.27.67-.36 
+                   1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 
+                   1 1V20c0 .55-.45 1-1 1C10.29 21 3 13.71 
+                   3 5c0-.55.45-1 1-1h3.5c.55 0 1 .45 
+                   1 1 0 1.24.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+        </svg>
+        +91 7263948865
+      </p>
+
+      <!-- Email -->
+      <p style="margin:10px 0; font-size:16px; display:flex; align-items:center; color:#fff;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+             fill="white" viewBox="0 0 24 24" style="margin-right:10px;">
+          <path d="M20 4H4c-1.1 0-2 .9-2 
+                   2v12c0 1.1.9 2 2 
+                   2h16c1.1 0 2-.9 
+                   2-2V6c0-1.1-.9-2-2-2zm0 
+                   4l-8 5-8-5V6l8 5 8-5v2z"/>
+        </svg>
+        sunmaxsolar2018@gmail.com
+      </p>
     </div>
 
     <!-- Social Links -->
     <div class="footer-col">
-      <h4>Follow Us</h4>
-      <div class="social-links">
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" alt="LinkedIn"></a>
+      <h4 style="margin-bottom:15px; color:#fff; font-size:18px;">Follow Us</h4>
+      <div style="display:flex; gap:15px;">
+        <a href="https://www.facebook.com/share/1BA3SUThJk/"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" style="width:26px;"></a>
       </div>
     </div>
   </div>
 
-  <div class="footer-bottom" style="margin-top:20px; text-align:center;">
-    <p>© 2025 Sunmax Solar Power. All Rights Reserved.</p>
-    <p>Developed By DW INNOVATION PVT. LTD.</p>
+  <!-- Footer Bottom -->
+  <div class="footer-bottom" style="margin-top:40px; text-align:center; border-top:1px solid rgba(255,255,255,0.2); padding:15px 0; font-size:15px; color:#fff;">
+    <p style="margin:5px 0;">© 2025 Sunmax Solar Power. All Rights Reserved.</p>
+    <p style="margin:5px 0;">Developed by DW Innovation Pvt. Ltd.</p>
   </div>
 </footer>
+
+
+
 
   <!-- Load navbar and then navbar.js -->
 
