--- a/navbar.html
+++ b/navbar.html
@@ -23,9 +23,12 @@
 </a>
 
         <div class="dropdown-content">
-          <a href="#product1">Product 1</a>
-          <a href="#product2">Product 2</a>
-          <a href="#product3">Product 3</a>
+          <a href="solar_panel.html">Solar Panel</a>
+          <a href="solar_rooftop.html">Solar Rooftop System</a>
+          <a href="solar_power.html">Solar Power System (Residential / Commercial / Industrial)</a>
+          <a href="solare_water_heater.html"> Solar Water Heater</a>
+          <a href="solar_system_repair.html">Solar System Repair & Maintenance</a>
+
         </div>
       </li>
      <li><a href="gallery.html">Gallery</a></li>
@@ -47,13 +50,15 @@
   <div class="dropdown">
     <a onclick="toggleDropdown(this)">Product <span class="arrow">▶</span></a>
     <div class="dropdown-content">
-      <a href="#product1">Product 1</a>
-      <a href="#product2">Product 2</a>
-      <a href="#product3">Product 3</a>
+          <a href="solar_panel.html">Solar Panel"</a>
+          <a href="solar_rooftop.html">Solar Rooftop System</a>
+          <a href="solar_power.html">Solar Power System (Residential / Commercial / Industrial)</a>
+          <a href="solare_water_heater.html"> Solar Water Heater</a>
+          <a href="solar_system_repair.html">Solar System Repair & Maintenance</a>
     </div>
   </div>
     <a href="gallery.html">Gallery</a>
-  <a href="#contact">Contact</a>
+  <a href="contact.html">Contact</a>
 </div>
 
 <script src="navbar.js"></script>
